--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>ایران چکاپ</title>
+    <title>ایران چکاپ: آزمایش پزشکی و درمان در ایران</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -72,7 +72,7 @@
                                     <li class="nav-item"><a class="nav-link" href="#about">درباره ما</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#features">ویژگی ها</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#screenshot">عکس ها</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#privacy"></a>پذیرش اینترنتی</li>
+                                    <li class="nav-item"><a class="nav-link" href="#privacy">پذیرش اینترنتی</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#rule-app">شرایط و ضوابط</a></li>
                                 </ul>
                                
