add english page and its style

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             فارسی
                           </a>
                           <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="en/index.html">
                               English
                             </a>
                             <a class="dropdown-item" href="#">
