edit english and other ltr parts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
     <!-- Core Stylesheet -->
-    <link href="style.css" rel="stylesheet">
+    <link href="style-rtl.css" rel="stylesheet">
     <!-- Responsive CSS -->
     <link href="css/responsive.css" rel="stylesheet">
     <link href="css/bootstrap-rtl.css" rel="stylesheet">
@@ -159,6 +159,10 @@
                         <p>
 							زیر نظر پزشکان متخصص، بدن خود را به طور کامل چکاپ کنید.
                         </p>
+                        <p style="height:10px;"></p>
+                        <a class="btn btn-success" href="#">
+                          ثبت نام کنید.
+                        </a>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -170,7 +174,11 @@
                         <h4>ویزیت دکتر</h4>
                         <p>
 							اگر مشکل خاصی دارید، به راحتی به پزشکان فوق تخصص دسترسی پیدا کنید.
-						</p>
+					              </p>
+                        <p style="height:10px;"></p>
+                        <a class="btn btn-success" href="#">
+                          ثبت نام کنید.
+                        </a>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -181,8 +189,12 @@
                         </div>
                         <h4>مشاوره با دکتر</h4>
                         <p>
-							درباره خودتان با پزشکان متخصص ایران چکاپ مشورت کنید.
-						</p>
+			                   درباره خودتان با پزشکان متخصص ایران چکاپ مشورت کنید.
+						            </p>
+                        <p style="height:10px;"></p>
+                        <a class="btn btn-success" href="#">
+                          ثبت نام کنید.
+                        </a>
                     </div>
                 </div>
             </div>
@@ -289,6 +301,9 @@
                         <h5>چکاپ چیست؟</h5>
                         <p>
                           توضیح مختصری درباره چیستی چکاپ. به همراه لینک های آن
+                          <a href="#">
+                            ادامه
+                          </a>
                         </p>
                     </div>
                 </div>
@@ -300,6 +315,9 @@
                         <h5>قوانین پزشکی</h5>
                         <p>
                           توضیح مختصری درباره قوانین پزشکی و لینک های آن
+                          <a href="#">
+                            ادامه
+                          </a>
                         </p>
                     </div>
                 </div>
@@ -309,7 +327,12 @@
                     data-wow-delay="0.2s">
                         <i class="ti-server" aria-hidden="true"></i>
                         <h5>مراکز پزشکی ایران</h5>
-                        <p>فهرستی از مراکز پزشکی ایران و لینک های آن</p>
+                        <p>
+                          فهرستی از مراکز پزشکی ایران و لینک های آن
+                          <a href="#">
+                            ادامه
+                          </a>
+                        </p>
                     </div>
                 </div>
                 <!-- Single Feature Start -->
@@ -318,7 +341,12 @@
                     data-wow-delay="0.5s">
                         <i class="ti-text" aria-hidden="true"></i>
                         <h5>تازه های پزشکی</h5>
-                        <p>آخرین اخبار مرتبط با پزشکی در ایران و جهان</p>
+                        <p>
+                          آخرین اخبار مرتبط با پزشکی در ایران و جهان
+                          <a href="#">
+                            ادامه
+                          </a>
+                        </p>
                     </div>
                 </div>
 
@@ -615,7 +643,7 @@
             </li>
             <li>
               <a href="#">
-                 اسکرین کامل سرطان
+                 اسکن کامل سرطان
               </a>
             </li>
           </ul>
@@ -635,7 +663,7 @@
             </li>
             <li>
               <a href="#">
-                مشاوره با دکتر
+                هزینه های ما
               </a>
             </li>
           </ul>
